# Tamagotchi

./: CMakeLists.txt  Tamagotchi.cpp  Textures.cpp  Textures.h  TimaAndStatus.cpp  TimeAndStatus.h
textures/: crying.txt  eating.txt  idle.txt  lose.txt  playing.txt  sleeping.txt  washing.txt
time_and_state/bathing/: time.txt
time_and_state/food/: time.txt
time_and_state/play/: time.txt
